# receipts-agent

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  agent.py  config.py  database.py  mcp_client.py  memory.py  prompts.py
app/skills/: __init__.py  registry.py
app/skills/belgian-context/: SKILL.md
app/skills/price-tracking/: SKILL.md
app/skills/receipt-schema/: SKILL.md
app/skills/smart-list/: SKILL.md
app/skills/spending-analytics/: SKILL.md
scripts/: validate_skills.py
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_database.py  test_mcp_client.py  test_memory.py  test_prompts.py  test_skills.py
