[project]
name = "receipts-agent"
version = "0.1.0"
description = "Receipts Agent — A2A service for shopping receipt analysis"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3",
    "anthropic>=0.49",
    "mcp>=1.0",
    "aiosqlite>=0.21",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
